--- a/WeatherAnalysis.ipynb
+++ b/WeatherAnalysis.ipynb
@@ -43,11 +43,7 @@
     }
    ],
    "source": [
-    "plotsmooth('HILO', 2000)\n",
-    "plotsmooth('HILO', 2001)\n",
-    "plotsmooth('HILO', 2002)\n",
-    "\n",
-    "pp.axis(ymin=15,ymax=30)#Using urllib to access file from a URL\n",
+    "#Using urllib to access file from a URL\n",
     "urllib.request.urlretrieve('https://www1.ncdc.noaa.gov/pub/data/ghcn/daily/readme.txt',\n",
     "                           'readme.txt')"
    ]
